--- a/project/client/src/app/pages/rules/index.html
+++ b/project/client/src/app/pages/rules/index.html
@@ -1,25 +1,6 @@
 
 
 <div class="row">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="form-group">
-        <ui-select multiple ng-model="vm.multipleSelectItems"
-                   ng-disabled="false"
-                   search-enabled="true"
-                   append-to-body="true"
-                   class="form-control">
-          <ui-select-match placeholder="规则">
-            {{$item.title}}
-          </ui-select-match>
-          <ui-select-choices repeat="multipleItem in vm.rules | filter: $select.search">
-            {{multipleItem.title}}
-          </ui-select-choices>
-        </ui-select>
-      </div>
-    </div>
-
-  </div>
 
   <table class="table table-bordered table-hover table-condensed"
          datatable="ng"
@@ -30,17 +11,17 @@
     <thead>
       <tr>
         <th></th>
-        <th>客户名称</th>
+        <th>名称</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="item in vm.customers">
+      <tr ng-repeat="item in vm.rules">
 
         <td>{{ $index+1 }}</td>
         <td>
           <a>
-            {{ item.name }}
+            {{ item.title }}
           </a>
         </td>
 
