--- a/project/client/src/app/pages/rules/modify.html
+++ b/project/client/src/app/pages/rules/modify.html
@@ -2,7 +2,7 @@
 
 <div
         ba-panel
-        ba-panel-title="客户信息"
+        ba-panel-title="信息"
         ba-panel-class="with-scroll panel-info"
 >
     <form novalidate name="validateForm" w5c-form-validate >
@@ -10,40 +10,24 @@
     <div class="row">
 
         <div class="form-group">
-            <label class="control-label">姓名</label>
+            <label class="control-label">标题</label>
             <input type="text" class="form-control"  placeholder=""
-                   ng-model="vm.customer.name"
-                   name="commonName"
-                   required>
-        </div>
-
-        <div class="form-group">
-            <label >性别</label>
-            <ui-select ng-model="vm.selectedGender"
-                       class="btn-group bootstrap-select form-control"
-            >
-                <ui-select-match  >
-                    <span> {{$select.selected.title}}</span>
-                </ui-select-match>
-                <ui-select-choices
-                        repeat="item in vm.genderList"
-                >
-                    <span ng-bind-html="item.title"></span>
-                </ui-select-choices>
-            </ui-select>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label">八字</label>
-            <input type="text" class="form-control"  placeholder=""
-                   ng-model="vm.customer.bazi"
+                   ng-model="vm.rule.title"
                    required>
         </div>
 
         <div class="form-group">
             <label class="control-label">描述</label>
-            <textarea  class="form-control"  placeholder=""
-                   ng-model="vm.customer.description">
+            <input type="text" class="form-control"  placeholder=""
+                   ng-model="vm.rule.description"
+                   >
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">算法</label>
+            <textarea  rows="50" class="form-control"  placeholder=""
+                       style="height:auto;"
+                   ng-model="vm.rule.algorithm">
 
             </textarea>
         </div>
