整体进行优化

--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -1,8 +1,9 @@
 
-<div ba-panel  ba-panel-class="with-scroll">
-  <div class="row">
+
+<div class="panel panel-default with-scroll">
+  <div class="panel-body">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-6">
         <div class="form-group">
           <ui-select multiple ng-model="vm.multipleSelectItems"
                      ng-disabled="false"
@@ -35,6 +36,7 @@
         <th>八字</th>
         <th>出生日期</th>
         <th></th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -56,15 +58,18 @@
           {{ item.birth }}
         </td>
 
+        <td>
+          {{ item.description }}
+        </td>
 
         <td>
           <button type="button" ng-click="vm.edit(item)"
-                  class="btn btn-primary btn-with-icon">
+                  class="btn-sm btn-primary btn-with-icon">
             <i class="fa fa-edit"></i>
             修改
           </button>
           <button type="button" ng-click="vm.destroy(item)"
-                  class="btn btn-danger btn-with-icon">
+                  class="btn-sm btn-danger btn-with-icon">
             <i class="fa fa-trash-o"></i>
             刪除
           </button>
@@ -74,6 +79,5 @@
       </tbody>
 
     </table>
-
   </div>
 </div>
