--- a/project/client/src/app/pages/customers/modify.html
+++ b/project/client/src/app/pages/customers/modify.html
@@ -7,7 +7,6 @@
 >
     <form novalidate name="validateForm" w5c-form-validate >
 
-
     <div class="row">
 
         <div class="form-group">
@@ -40,6 +39,14 @@
                    ng-model="vm.customer.bazi"
                    name="commonName"
                    required>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">生日</label>
+            <input type="text" class="form-control"  placeholder=""
+                   ng-model="vm.customer.birth"
+
+                   >
         </div>
 
         <div class="form-group">
