--- a/project/client/src/app/pages/rules/index.html
+++ b/project/client/src/app/pages/rules/index.html
@@ -1,6 +1,6 @@
 
-<div ba-panel  ba-panel-class="with-scroll">
-  <div class="row">
+<div class="panel panel-default with-scroll">
+  <div class="panel-body">
 
     <table class="table table-bordered table-hover table-condensed"
            datatable="ng"
@@ -27,12 +27,12 @@
 
         <td>
           <button type="button" ng-click="vm.edit(item)"
-                  class="btn btn-primary btn-with-icon">
+                  class="btn-sm btn-primary btn-with-icon">
             <i class="fa fa-edit"></i>
             修改
           </button>
           <button type="button" ng-click="vm.destroy(item)"
-                  class="btn btn-danger btn-with-icon">
+                  class="btn-sm btn-danger btn-with-icon">
             <i class="fa fa-trash-o"></i>
             刪除
           </button>
