增加行年部分

--- a/project/client/src/app/pages/customers/detail.html
+++ b/project/client/src/app/pages/customers/detail.html
@@ -4,9 +4,8 @@
 
         <div class="row">
             <div class="col-xs-2">
-                <div>
-                    男
-                </div>
+                <h2>性别</h2>
+                <h2><span class="text-danger">男</span></h2>
 
             </div>
             <div class="col-xs-2">
@@ -15,73 +14,101 @@
                   <span class="text-info">{{vm.bazi.niangan}}</span>
               </p>
                 <p>
-                    <span class="text-info">vm.bazi.nianzhi</span>
+                    <span class="text-info">{{vm.bazi.nianzhi}}</span>
                 </p>
             </div>
             <div class="col-xs-2">
                 <h2>月</h2>
                 <p>
-                    <span class="text-info">vm.bazi.yuegan</span>
+                    <span class="text-info">{{vm.bazi.yuegan}}</span>
                 </p>
                 <p>
-                    <span class="text-info">vm.bazi.yuezhi</span>
+                    <span class="text-info">{{vm.bazi.yuezhi}}</span>
                 </p>
             </div>
             <div class="col-xs-2">
                 <h2>日</h2>
                 <p>
-                    <span class="text-info">vm.bazi.rigan</span>
+                    <span class="text-info">{{vm.bazi.rigan}}</span>
                 </p>
                 <p>
-                    <span class="text-info">vm.bazi.rizhi</span>
+                    <span class="text-info">{{vm.bazi.rizhi}}</span>
                 </p>
             </div>
             <div class="col-xs-2">
                 <h2>时</h2>
                 <p>
-                    <span class="text-info">vm.bazi.shigan</span>
+                    <span class="text-info">{{vm.bazi.shigan}}</span>
                 </p>
                 <p>
-                    <span class="text-info">vm.bazi.shizhi</span>
+                    <span class="text-info">{{vm.bazi.shizhi}}</span>
                 </p>
             </div>
             <div class="col-xs-2">
                 <h2>胎</h2>
                 <p>
-                    <span class="text-info">vm.bazi.taigan</span>
+                    <span class="text-info">{{vm.bazi.taigan}}</span>
                 </p>
                 <p>
-                    <span class="text-info">vm.bazi.taizhi</span>
+                    <span class="text-info">{{vm.bazi.taizhi}}</span>
                 </p>
             </div>
         </div>
-
+        <div class="row">
+            <div class="col-md-2">
+                <div class="input-group">
+                    <span class="input-group-addon">大运</span>
+                    <input  class="form-control"
+                            ng-model="vm.dayun"
+                    >
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="input-group">
+                    <span class="input-group-addon">行年</span>
+                    <input  class="form-control"
+                            ng-model="vm.xiaoyun"
+                    >
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="input-group">
+                    <span class="input-group-addon">流年</span>
+                    <input  class="form-control"
+                            ng-model="vm.liunian"
+                    >
+                </div>
+            </div>
+            <div class="col-md-2">
+                <button type="submit" class="btn btn-info" ng-click="vm.calculateXingNian()">分析</button>
+            </div>
+        </div>
         <div class="row">
             <uib-accordion>
+
+
                 <uib-accordion-group heading="行年-传统算法" panel-class="panel-primary bootstrap-panel accordion-panel">
-                    <div class="panel-body11">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <div class="input-group">
-                                    <span class="input-group-addon" id="basic-addon3">出生年</span>
-                                    <input type="number" class="form-control"
-                                           aria-describedby="basic-addon3"
-                                           ng-model="vm.year"
-                                    >
-                                </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="input-group">
+                                <span class="input-group-addon" id="basic-addon3">出生年</span>
+                                <input type="number" class="form-control"
+                                       aria-describedby="basic-addon3"
+                                       ng-model="vm..bazi.birth"
+                                >
                             </div>
-                            <div class="col-md-2">
-                                <div class="input-group">
-                                    <span class="input-group-addon">计算年</span>
-                                    <input type="number" class="form-control"
-                                           aria-describedby="basic-addon3"
-                                           ng-model="vm.year"
-                                    >
-                                </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="input-group">
+                                <span class="input-group-addon">计算年</span>
+                                <input type="number" class="form-control"
+                                       aria-describedby="basic-addon3"
+                                       ng-model="vm.year"
+                                >
                             </div>
-                            <div class="col-md-2">
-                                <button type="submit" class="btn btn-info" ng-click="vm.calculateXingNian()">计算</button>
-                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <button type="submit" class="btn btn-info" ng-click="vm.calculateXingNian()">计算</button>
                         </div>
                     </div>
                     <table class="table">
@@ -98,10 +125,9 @@
                         </tbody>
                     </table>
                 </uib-accordion-group>
-                <uib-accordion-group heading="Success" panel-class="panel-success bootstrap-panel accordion-panel">
-                    Success <i class="ion-checkmark-round"></i>
-                </uib-accordion-group>
+                <uib-accordion-group heading="大运行年流年" panel-class="panel-success bootstrap-panel accordion-panel">
 
+                </uib-accordion-group>
             </uib-accordion>
 
         </div>
