--- a/project/client/src/sass/custom.scss
+++ b/project/client/src/sass/custom.scss
@@ -110,7 +110,7 @@
 //}
 
 .panel-title {
-  color: #ffffff !important;
+  color: #68749c !important;
   line-height: 0.6 !important;
   font-size: 18px !important;
 }
